phpmyadmin/01-phpmyadmin-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phpmyadmin
  labels:
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/part-of: database
    istio-injection: enabled
---
