phpmyadmin/04-phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels: &Labels
    app: phpmyadmin
    #app.kubernetes.io/name: $APP_INSTANCE_NAME
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/part-of: database
spec:
  replicas: 1
  selector:
    matchLabels: *Labels
  template:
    annotations:
      sidecar.istio.io/inject: "true"
    metadata:
      labels: *Labels
    spec:
      securityContext: {}
      containers:
      - name: phpmyadmin
        image: phpmyadmin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http-phpmyadmin
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /etc/phpmyadmin/config.user.inc.php
          subPath: config.user.inc.php
      volumes:
      - name: config
        configMap:
          name: phpmyadmin-config
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels:
    app: phpmyadmin
    #app.kubernetes.io/name: $APP_INSTANCE_NAME
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/part-of: database
spec:
  selector:
    app: phpmyadmin
  ports:
  - name: http-ui
    port: 80
    protocol: TCP
    targetPort: 80
  #externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  type: ClusterIP
---
